Don't set DVF_DETACH_SHUTDOWN.  The MII layer wants to manage the lifecycle of the PHY devices, and if a NIC driver chooses not to detach its PHYs at shutdown, that's the driver's business.

PR kern/55121.