sys/arch/arm/amlogic/gxlphy.c
@@ -1,4 +1,4 @@
-/* $NetBSD: gxlphy.c,v 1.3 2020/03/15 23:04:50 thorpej Exp $ */
+/* $NetBSD: gxlphy.c,v 1.4 2020/03/28 18:37:18 thorpej Exp $ */
 
 /*
  * Copyright (c) 2019 Jared McNeill <jmcneill@invisible.ca>
@@ -31,7 +31,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: gxlphy.c,v 1.3 2020/03/15 23:04:50 thorpej Exp $");
+__KERNEL_RCSID(0, "$NetBSD: gxlphy.c,v 1.4 2020/03/28 18:37:18 thorpej Exp $");
 
 #include <sys/param.h>
 #include <sys/systm.h>
@@ -70,9 +70,8 @@ __KERNEL_RCSID(0, "$NetBSD: gxlphy.c,v 1.3 2020/03/15 23:04:50 thorpej Exp $");
 static int	gxlphymatch(device_t, cfdata_t, void *);
 static void	gxlphyattach(device_t, device_t, void *);
 
-CFATTACH_DECL3_NEW(gxlphy, sizeof(struct mii_softc),
-    gxlphymatch, gxlphyattach, mii_phy_detach, mii_phy_activate, NULL, NULL,
-    DVF_DETACH_SHUTDOWN);
+CFATTACH_DECL_NEW(gxlphy, sizeof(struct mii_softc),
+    gxlphymatch, gxlphyattach, mii_phy_detach, mii_phy_activate);
 
 static int	gxlphy_service(struct mii_softc *, struct mii_data *, int);
 static void	gxlphy_status(struct mii_softc *);
